# simple-app-fastapi-and-d3

./: README.md  index.html  main.py  pyproject.toml  script.js
css/: main.css
d3test/: __init__.py
d3test/data/: test_data_01.csv  test_data_02.csv
